objects/DMAPP__Unit_Solution_Opp__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__In_Scope_Current_Op__c</fullName>
        <formula>IF( DMAPP__Opportunity_Type__c = &apos;Current&apos;,  
   IF( AND( DMAPP__Opportunity__r.CloseDate &gt;=  DMAPP__Plan_Unit__r.DMAPP__Account_Plan__r.DMAPP__From_Date__c ,  DMAPP__Opportunity__r.CloseDate &lt;=  DMAPP__Plan_Unit__r.DMAPP__Account_Plan__r.DMAPP__To_Date__c ) , 
     true, 
     false) , 
 false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Scope Current Op</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Is_Potential__c</fullName>
        <formula>IF(OR(DMAPP__Opportunity__c = &apos;&apos;, ISNULL(DMAPP__Opportunity__c)), 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Opportunity_Type__c</fullName>
        <formula>IF( OR(ISBLANK(DMAPP__Opportunity__c), ISNULL(DMAPP__Opportunity__c)) ,&apos;Potential&apos;,  IF( DMAPP__Opportunity__r.IsClosed , IF( DMAPP__Opportunity__r.IsWon , &apos;Won&apos;, &apos;Lost&apos;), &apos;Current&apos; ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Unit_Solution_Opps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Unit_Solution_Opps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Plan_Solution__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Plan Solution</label>
        <referenceTo>DMAPP__AM_Plan_Solution__c</referenceTo>
        <relationshipLabel>Unit Opps</relationshipLabel>
        <relationshipName>Unit_Opps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Plan_Unit__c</fullName>
        <label>Plan Unit</label>
        <referenceTo>DMAPP__AM_Plan_Unit__c</referenceTo>
        <relationshipLabel>Unit Opps</relationshipLabel>
        <relationshipName>Unit_Opps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Target__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Value_To_Them__c</fullName>
        <label>Value To Them</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Value_To_Us__c</fullName>
        <label>Value To Us</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Value_Type__c</fullName>
        <inlineHelpText>Type of opportunity as defined by the value map</inlineHelpText>
        <label>Value Type</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Was_Qualified__c</fullName>
        <formula>if(isblank(DMAPP__Opportunity__c), false, if(DMAPP__Opportunity__r.CreatedDate &gt; CreatedDate, true, false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Was Qualified</label>
        <type>Checkbox</type>
    </fields>
    <label>Unit Opp</label>
    <nameField>
        <label>Opp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit Opps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>